fixed tablet view width overflow in articles section

--- a/src/scss/layout/_articles.scss
+++ b/src/scss/layout/_articles.scss
@@ -12,6 +12,8 @@
   justify-content: center;
   grid-gap: 20px;
   padding-bottom: 40px;
+  padding-left: 10%;
+  padding-right: 10%;
 
   @media all and (min-width: 768px) {
     grid-auto-flow: column;
@@ -20,7 +22,6 @@
 
   &__article {
     text-align: center;
-    width: 250px;
   }
 
   &__img {
